fixed visibility of nav in mobile

--- a/main.css
+++ b/main.css
@@ -24,6 +24,12 @@
   width: 100%;
   height: auto;
 }
+
+#nav{
+  display:none;
+  visibility: hidden;
+}
+
   /* NAVBAR CODE STARTS HERE */
 
   nav{
@@ -314,7 +320,7 @@ a:hover:link{
     }
 
 .txtabout{
-  margin-top:1rem;
+  margin-top:1%;
   margin-left: -0.3rem;
   margin-right: auto;
   font-size:12px;
@@ -637,7 +643,7 @@ height: 50px;
 
 .txtabout{
   font-size:20px;
-  margin-top: 1.5rem;
+  margin-top: 1%;
   margin-left: -0.5rem;
 }
 
@@ -765,7 +771,6 @@ form{
 
 .txtabout{
   font-size:23px;
-  margin-top:3%;
   margin-left: -0.5rem;
 }
 
@@ -968,6 +973,9 @@ form{
 
 @media only screen and (min-width:859px){
 
+  #nav{
+
+  }
 
 .contact-title
 {
@@ -1222,7 +1230,7 @@ aside{
     height:130vh;
   }
   .txtabout{
-    margin-top: 3%;
+    margin-top: 1%;
     margin-left: -1%;
     margin-right: auto;
     font-size: 38px;
@@ -1292,6 +1300,15 @@ form{
 
 
   @media (min-width: 859px){
+
+    #nav{
+      display:initial;
+      visibility:visible;
+    }
+    #nav1{
+      display:none;
+      visibility:hidden;
+    }
    
     nav ul{
       opacity: 0.8;
@@ -1517,7 +1534,7 @@ aside{
 
   .txtabout{
     font-size:55px;
-    margin-top:6%;
+    margin-top:1%;
   }
 
 }
@@ -1573,7 +1590,7 @@ section#projects{
   
   .txtabout{
     font-size: 57px;
-    margin-top: 2%;
+    margin-top: 1%;
   }
   
   .btn-download{
@@ -1673,7 +1690,7 @@ nav ul li a{
 .txtabout{
   font-size: 79px;
   letter-spacing:5px;
-  margin-top: 2%;
+  margin-top:1%;
 }
 
 .btn-download{
